--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>Hello World</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Hello World</h1>
     <div id="app">
 
     </div>
