--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,6 @@
 
     </div>
 
-    <script src="/bundle.js" charset="utf-8"></script>
+    <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
